--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,15 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "install-client": "cd client && npm install",
+        "heroku-postbuild": "npm run install-client && npm run build",
+        "server": "nodemon server.js",
+        "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    
   },
   "browserslist": {
     "production": [
